<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="loggin_title">Please Log in</string>

    <!-- NOTIFICATION -->
    <string name="notif_creation_title">Immovable Saved</string>
    <string name="notif_update_title">Immovable Updated</string>
    <string name="notif_creation_text">Your new immovable has been saved !</string>
    <string name="notif_update_text">Your immovable has been updated !</string>

    <!-- PERMISSIONS -->
    <string name="popup_title_permission">This application need permissions to work</string>

    <!-- Activity Main -->
    <string name="activity_main_title">R.E.M</string>
    <string name="user_title">Please select a user</string>

    <!-- Toolbar menu -->
    <string name="menu_add_title">Add</string>
    <string name="menu_edit_title">Edit</string>
    <string name="menu_search_title">Search</string>
    <string name="search_query_hint">Search Immovable</string>

    <!-- Menu drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_map_title">MAP VIEW</string>
    <string name="menu_settings_title">SETTINGS</string>
    <string name="menu_log_out_title">LOG OUT</string>

    <!-- Recycle item -->
    <string name="no_text_yet">No informations yet</string>

    <!-- Detail Fragment -->
    <string name="media_title">Media</string>
    <string name="description_title">Description</string>
    <string name="surface_title">Surface</string>
    <string name="rooms_title">Number of rooms</string>
    <string name="bath_title">Number of bathrooms</string>
    <string name="bed_title">Number of bedrooms</string>
    <string name="location_title">Location</string>

    <!-- Firebase -->
    <string name="error_unknown_error">An unknown error has occurred&#8230;</string>

    <!-- Edition Activity -->

    <string name="activity_edition_creation_title">Immovable Creation</string>
    <string name="activity_edition_editing_title">Immovable Edition</string>
    <string name="global_group">GLOBAL</string>
    <string name="location_group">LOCATION</string>
    <string name="description_group">DESCRIPTION</string>
    <string name="poi_group">NEARBY POINTS OF INTEREST</string>
    <string name="gallery_group">GALLERY*</string>
    <string name="type_presentation">Type of immovable* :</string>
    <string name="price_presentation">Price (dollars)* :</string>
    <string name="surface_presentation">Surface (m2) : </string>
    <string name="piece_number_presentation">Piece number :</string>
    <string name="bath_number_presentation">Bath number :</string>
    <string name="bed_number_presentation">Bed number :</string>
    <string name="address_presentation">Address* :</string>
    <string name="cpt_address_presentation">Address complement :</string>
    <string name="city_presentation">City* :</string>
    <string name="postal_code_presentation">Postal code* :</string>
    <string name="country_presentation">Country* :</string>
    <string name="poi_school">School</string>
    <string name="poi_market">Market</string>
    <string name="poi_bus">Bus Station</string>
    <string name="poi_sport">Sport Hall</string>
    <string name="poi_monument">Monument</string>
    <string name="poi_park">Park</string>

    <string name="gallery_outdoor">Outdoor</string>
    <string name="gallery_kitchen">Kitchen</string>
    <string name="gallery_bath">Bath</string>
    <string name="gallery_bed">Bed</string>
    <string name="gallery_living">Living</string>
    <string name="gallery_other">Other</string>
    <string name="chooser_text">Where do you want to pick your photo ?</string>

    <string name="selling_button">Sold</string>
    <string name="validation_button">Validation</string>

    <string name="error_photo_number">Immovable should at least have one photo</string>
    <string name="error_fields">Fields with (*) are mandatory</string>

    <!-- MAP Activity -->
    <string name="activity_map_title">Map View</string>

    <!-- Search Dialog -->
    <string name="search_title">Immovables Search</string>
    <string name="hint_min_surface">minimal surface</string>
    <string name="hint_max_surface">maximal surface</string>
    <string name="hint_city">city</string>
    <string name="hint_min_photo_number">min photo number</string>
    <string name="hint_min_price">minimal price</string>
    <string name="hint_max_price">maximal price</string>
    <string name="enter_date">Enter date</string>
    <string name="selling_date">Selling date</string>
    <string name="price_range_group">PRICE RANGE</string>
    <string name="surface_range_group">SURFACE RANGE</string>
    <string name="others_group">OTHERS</string>

    <string name="ok">Search</string>
    <string name="cancel">Cancel</string>

</resources>
