<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_menu_add"
        android:icon="@drawable/baseline_add_black_48"
        app:showAsAction="ifRoom"
        android:title="@string/menu_add_title">
    </item>

    <item
        android:id="@+id/toolbar_menu_edit"
        android:icon="@drawable/baseline_create_black_48"
        app:showAsAction="ifRoom"
        android:title="@string/menu_edit_title">
    </item>

    <item
        android:id="@+id/toolbar_menu_search"
        android:icon="@drawable/baseline_search_black_48"
        app:showAsAction="ifRoom"
        android:title="@string/menu_search_title">
    </item>

</menu>